tests/integration/snapshots/integration__conformance__y_string_comments.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["a/*b*/c/*d//e"]
stdout ---
["a/*b*/c/*d//e"]

stderr ---
