tests/integration/snapshots/integration__conformance__y_string_comments.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 0
success: true
stdin ---
["a/*b*/c/*d//e"]
stdout ---
["a/*b*/c/*d//e"]

stderr ---
