tests/integration/snapshots/integration__conformance__y_string_double_escape_a.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 0
success: true
stdin ---
["\\a"]
stdout ---
["\\a"]

stderr ---
