tests/integration/snapshots/integration__conformance__y_string_double_escape_a.json.snap
---
source: tests/integration/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\\a"]
stdout --- 
["\\a"]
stderr --- 
<empty>
