tests/integration/snapshots/integration__conformance__y_string_double_escape_n.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: ["format"]
status: 0
success: true
stdin ---
["\\n"]
stdout ---
["\\n"]

stderr ---
