tests/integration/snapshots/integration__conformance__y_string_escaped_control_character.json-format---uglify.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format", "--uglify"]
status: 0
success: true
stdin ---
["\u0012"]
stdout ---
["\u0012"]

stderr ---
